update buzz images

--- a/partials/projects/buzz.hbs
+++ b/partials/projects/buzz.hbs
@@ -1,22 +1,22 @@
 <article class="project-item design dev mobile masonry-brick" style="position: absolute; top: 0px; left: 0px;">
-    <img class="img-responsive project-image" src="/images/projects/thumb-9.jpg" alt="Buzz Interior Design Thumbnail">
+    <img class="img-responsive project-image" src="./images/projects/thumb-9.jpg" alt="Buzz Interior Design Thumbnail">
     <div class="hover-mask">
         <h2 class="project-title">Buzz Interior Design</h2>
         <p class="project-skills">
             <span class="skill">design</span> <span class="skill">development</span> <span class="skill">mobile</span>
         </p>
     </div>
-
     <div class="sr-only project-description"
-        data-images="/images/projects/tom-selina/thomas-and-selina.jpg, /images/projects/tom-selina/thomas-and-selina-2.jpg, /images/projects/tom-selina/thomas-and-selina-3.jpg">
+        data-images="./images/projects/buzz/1-buzz-interior-design-940x549.png, ./images/projects/buzz/2-buzz-interior-design.png, ./images/projects/buzz/buzz-interior-design-2.PNG, ./images/projects/buzz/buzz-interior-design-mobile.PNG">
         <p>
             This Dorset based Interior Design company had re-branded and wanted a new website to match their new logo. I designed a
             Bee based look with honeycomb background, beelines and bullet points. I developed a platform for them to add their own
-            content to showcase the great Interior Design work they do.
+            content to showcase the great
+            Interior Design work they do.
         </p>
 
         <a class="btn btn-color2" target="_blank" href="https://buzzinteriordesign.co.uk/">
-            <i class="fa fa-arrow-right" aria-hidden="true"></i>Visit Website
+            <i class="fa fa-arrow-right" aria-hidden=true></i>Visit Website
         </a>
     </div>
 </article>
