add lofts and ladders images to portfolio

--- a/partials/projects/loftsAndLadders.hbs
+++ b/partials/projects/loftsAndLadders.hbs
@@ -1,11 +1,11 @@
 <article class="project-item design dev mobile seo">
-    <img class="img-responsive project-image" src="/images/projects/thumb-5.png" alt="eVision">
+    <img class="img-responsive project-image" src="/images/projects/thumb-10.jpg" alt="Lofts and Ladders UK">
     <div class="hover-mask">
         <h2 class="project-title">Lofts &amp; Ladders UK</h2>
         <p>design / development / mobile / SEO</p>
     </div>
     <div class="sr-only project-description"
-        data-images="/images/projects/evision/eVision-1.png,/images/projects/evision/eVision-2.png, /images/projects/evision/evision-mobile-teal.png">
+        data-images="/images/projects/loftsAndLadders/lofts-and-ladders-1.jpg,/images/projects/loftsAndLadders/lofts-and-ladders-2.jpg, /images/projects/loftsAndLadders/lofts-and-ladders-3.jpg, /images/projects/loftsAndLadders/lofts-and-ladders-4.jpg, /images/projects/loftsAndLadders/lofts-and-ladders-5.jpg">
         <p>
             Lofts &amp; Ladders UK is a local provider of home improvement services specialising in Loft Ladders, Loft Boarding and Loft Hatches.
         </p>
