--- a/partials/projects/smt.hbs
+++ b/partials/projects/smt.hbs
@@ -1,5 +1,5 @@
 <article class="project-item design dev mobile masonry-brick" style="position: absolute; top: 0px; left: 0px;">
-    <img class="img-responsive project-image" width="400" height="300" src="/images/projects/smt/smt-thumbnail.png"
+    <img class="img-responsive project-image" width="400" height="300" src="/images/projects/thumb-11.png"
         alt="Sedgemoor Motorcycle Training Thumbnail">
     <div class="hover-mask">
         <h2 class="project-title">Sedgemoor Motorcycle Training</h2>
@@ -8,12 +8,10 @@
         </p>
     </div>
 
-    <div class="sr-only project-description"
-        data-images="/images/projects/tom-selina/thomas-and-selina.jpg, /images/projects/tom-selina/thomas-and-selina-2.jpg, /images/projects/tom-selina/thomas-and-selina-3.jpg">
+    <div class="sr-only project-description" data-images="/images/projects/smt/sedgemoor-motorcycle-training.png">
         <p>
             I was recommended due to recent success with Local Search Engine Optimisation (SEO). Sedgemoor Motorcycle Training wanted
-            a design to make them stand
-            out from their competition and to rank highly with search engines for local searches.
+            a design to make them stand out from their competition and to rank highly with search engines for local searches.
         </p>
         <a class="btn btn-color2" target="_blank" href="https://sedgemoormotorcycletraining.co.uk/"><i class="fa fa-arrow-right"
                 aria-hidden="true"></i>Visit Website</a>
